# minecraft-llm-agent-community

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_structure.sh  ddpyproject.toml  hello.py  learn.py  learn_voyager.py  package-lock.json  package.json  pyproject.toml  setup.py  start_agent.py
.conf/: .pre-commit-config.yaml  flake8.cfg  ruff.toml
.cursor/rules/: minecraft.mdc
.github/workflows/: deploy-docs.yml  main.yml  test-deploy-docs.yml  tset-deploy-docs.yml
bridge-server/: .prettierignore  eslint.config.mjs  index.js  logger.js  package-lock.json  package.json
bridge-server/lib/: logger.js  skillLoader.js  utils.js
bridge-server/mineflayer-collectblock/: README.md  tsconfig.json
docs/: docusaurus.config.js  docusaurus.config.ts  package-lock.json
docs/docs/: intro.md
examples/: follow.py  mineflayer.ipynb
installation/: minecraft_instance_install.md
minecraft-llm-agent/: package-lock.json  package.json
minecraft-llm-agent/src/: app.module.ts  main.ts
minecraft_agent_community/: voyager.py
minecraft_agent_community/agents/: action.py  critic.py  curriculum.py  skill.py
minecraft_agent_community/control_primitives/: __init__.py
minecraft_agent_community/control_primitives_context/: __init__.py
minecraft_agent_community/env/: .gitignore  bridge.py  minecraft_launcher.py  process_monitor.py
minecraft_agent_community/prompts/: __init__.py
minecraft_agent_community/utils/: json_utils.py
notebooks/: mineflayer.ipynb
scripts/: download_run_server.sh  run_server.sh
scritps/: download_run_server.sh  run_server.sh
src/: app.js
src/agents/: actionAgent.js  criticAgent.js  curriculumAgent.js  skillManager.js
src/controllers/: voyagerController.js
src/env/: minecraftEnv.js
src/managers/: eventManager.js  recorder.js
src/minecraft/: botManager.js
src/routes/: voyagerRoutes.js
src/services/: voyagerService.js
src/utils/: controlPrimitives.js  llmService.js
voyager/: package-lock.json  voyager.py
voyager/agents/: action.py  critic.py  (+2 more)
world_setup/: spawn.py
(+411 files in other folders)
